fixed bug and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html, body {
     color: var(--black);
     font-size: 16px;
     letter-spacing: -0.5px;
-    padding: 5em;
+    padding: 1em;
 }
 
 div {
